1.3.1 to 1.3.2
----------------------------------------------------------------------
- Pull navbar from the top and bottom of the web pages into its own include
  file and use a bean to drive its operation instead of a ton of if statements.
- Pull ant filter replacements out of the web app from {header,footer}.jsp
  and about.jsp.  Use configuration.properties/Vault.getProperty() and
  Vault.homeDir() instead.
- More CSS-ification of the webapp.  Clean up the formatting of styles.ccs.
- Add a standalone ping utility to org.opennms.protocols.icmp.IcmpSocket.
  To use, do a "sh build.sh jar" and then execute this as root:
      java -Dopennms.library.jicmp=`pwd`/work/jicmp/libjicmp.* \
          -cp work/jar/opennms_services.jar \
          org.opennms.protocols.icmp.IcmpSocket <host>
  Note: the libjicmp.* part matches the libjicmp shared library name,
  no matter what the architecture.  The specific library is libjicmp.so
  on most platforms and libjicmp.jnilib on Mac OS X.
- Add NSClient capsd plugin and poller monitor written by Matt Raykowski,
  <matt.raykowski@gmail.com>.  Thanks, Matt!  Enhancement bug #1389.

1.3.0 to 1.3.1
----------------------------------------------------------------------
- Added NRPE capsd plugin and add NRPE entries to capsd and poller
  configuration files.

1.2.X to 1.3.0
----------------------------------------------------------------------
- Added stylesheets to the alarm and event lists, and added a
  specific UEI filter to events.
- Added a viewer page for Alarms.
- Add CentOS 4 support to the RPM spec file.  Bug #1222.  Thanks
  Ted Kaczmarek <tedkaz@optonline.net>.
- Fix the arguments to "find" in runjava.  It should now work properly on
  Mandrake Linux.  Bug #1205.  Thanks Chris Goheen <cg@sonic.net> for
  reporting this.
- Remove the Java dependency from the RPM package.  Of the Java packages
  out there, there is no common package name or virtual package name.