@@ -1,5 +1,10 @@
 1.3.1 to 1.3.2
 ----------------------------------------------------------------------
+- Changed OpenNMS so that manage/unmange interfaces deletes active
+  outages and does not require a reboot when unmanaging a service.
+- Fixed an issue with the Scheduled Outages GUI and Java 5.
+- Fixed an issue with data collection when the primary interface is
+  on a NIC with other virtual IPs.
 - Pull navbar from the top and bottom of the web pages into its own include
   file and use a bean to drive its operation instead of a ton of if statements.
 - Pull ant filter replacements out of the web app from {header,footer}.jsp
